fix: fix modal and bottom-sheet dark mode (#1043)
* fix: fix modal and bottom-sheet dark mode

* test(bottom-sheet): updated tests

* chore: add extra alpha indicator to light-bg-primary theme in color-mods

--- a/packages/bottom-sheet/src/components/closer/index.module.css
+++ b/packages/bottom-sheet/src/components/closer/index.module.css
@@ -1,3 +1,7 @@
+:root {
+    --bottom-sheet-closer-bg-color: var(--color-light-bg-primary-alpha-40);
+}
+
 .closer {
     width: 32px;
     height: 32px;
@@ -8,7 +12,7 @@
 }
 
 .button {
-    background: rgba(0, 0, 0, 0.04);
+    background: var(--bottom-sheet-closer-bg-color);
     backdrop-filter: blur(10px);
     border-radius: 50px;
 }
