--- a/packages/modal/src/components/closer/index.module.css
+++ b/packages/modal/src/components/closer/index.module.css
@@ -1,5 +1,9 @@
 @import '../../vars.css';
 
+:root {
+    --modal-closer-bg-color: var(--color-light-bg-primary-alpha-40);
+}
+
 .closer {
     flex-shrink: 0;
     width: 48px;
@@ -11,7 +15,7 @@
 }
 
 .button {
-    background: rgba(255, 255, 255, 0.4);
+    background: var(--modal-closer-bg-color);
     backdrop-filter: blur(10px);
     border-radius: 50px;
 }
